src/objects/ACCL__Account_Extension__c.object
<CustomObject>
    <description>Object to record account roles and further product related attributes.</description>
    <fields>
        <fullName>ACCL__Account_Plan_Type__c</fullName>
        <description>Specifies the level of the customer in the trade org hierarchies which is used for aggregation of KPIs.</description>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <description>Reference to the customer to which the extension record is assigned.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Extensions</relationshipLabel>
        <relationshipName>Account_Extensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Bill_To_Role_Valid_From__c</fullName>
        <description>From this date on the Bill To Role is valid.</description>
        <label>Bill To Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Bill_To_Role_Valid_Thru__c</fullName>
        <description>Until this date the Bill To Role is valid.</description>
        <label>Bill To Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Broker_Role_Valid_From__c</fullName>
        <description>From this date on the Broker Role is valid.</description>
        <label>Broker Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Broker_Role_Valid_Thru__c</fullName>
        <description>Until this date the Broker Role is valid.</description>
        <label>Broker Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Class_Of_Trade__c</fullName>
        <description>Reference to the account the company segment belongs to.</description>
        <label>Class Of Trade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SM</fullName>
                    <label>SPECIALISTS</label>
                </value>
                <value>
                    <fullName>HM</fullName>
                    <label>HYPERMARKET</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>GROCERY</label>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>AFH RE-SELLER</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>AFH RETAIL</label>
                </value>
                <value>
                    <fullName>BC</fullName>
                    <label>BOCA</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>DISTRIBUTOR (BANK)</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>OPERATOR (BANK)</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>BISCUIT</label>
                </value>
                <value>
                    <fullName>CD</fullName>
                    <label>CANADA KMI</label>
                </value>
                <value>
                    <fullName>CN</fullName>
                    <label>CANADA</label>
                </value>
                <value>
                    <fullName>CS</fullName>
                    <label>C STORES</label>
                </value>
                <value>
                    <fullName>CW</fullName>
                    <label>CLUB WAREHOUSE</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>DISTRIBUTOR - SPECIALTY</label>
                </value>
                <value>
                    <fullName>DD</fullName>
                    <label>DSD (PIZZA) RESERVD FOR QUEST</label>
                </value>
                <value>
                    <fullName>DF</fullName>
                    <label>DUTY FREE</label>
                </value>
                <value>
                    <fullName>DM</fullName>
                    <label>DOMESTIC MILITARY</label>
                </value>
                <value>
                    <fullName>DS</fullName>
                    <label>DISCOUNT</label>
                </value>
                <value>
                    <fullName>DT</fullName>
                    <label>DISTRIBUTOR</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>ECOMMERCE PUREPLAY</label>
                </value>
                <value>
                    <fullName>FS</fullName>
                    <label>FOODSERVICE</label>
                </value>
                <value>
                    <fullName>HS</fullName>
                    <label>HOME STORE</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>INTERNATIONAL</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>KIOSK (MARKET OUTLETS)</label>
                </value>
                <value>
                    <fullName>KF</fullName>
                    <label>KFI</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>LIQUIDATION / CLOSE-OUT</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>MASS</label>
                </value>
                <value>
                    <fullName>MB</fullName>
                    <label>CONTRACT DISTRIBUTOR</label>
                </value>
                <value>
                    <fullName>MC</fullName>
                    <label>M&amp;P COMMERCIAL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Company_Type__c</fullName>
        <description>Defines the type of Customer.</description>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>OnTrade</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>ThirdParty</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Payee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Modules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes, whether the account can be used for listing module classification.</description>
        <label>Consider Modules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Id__c</fullName>
        <description>Reference to the customer to which the extension record is assigned.</description>
        <label>Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Number__c</fullName>
        <description>Defines the Role number of the customer.</description>
        <label>Customer Role Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Price_List_type__c</fullName>
        <description>Defines the Role Price List type from the customer.</description>
        <label>Customer Role Price List type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Direct Customer</fullName>
                </value>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Price_Type__c</fullName>
        <description>Defines the Role Price type from the customer.</description>
        <label>Customer Role Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
                <value>
                    <fullName>US01_Continental</fullName>
                </value>
                <value>
                    <fullName>US01_Alaska</fullName>
                </value>
                <value>
                    <fullName>US01_Hawaii</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Valid_From__c</fullName>
        <description>From this date on the Customer Role is valid.</description>
        <label>Customer Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Role_Valid_Thru__c</fullName>
        <description>Until this date the Customer Role is valid.</description>
        <label>Customer Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_Closure__c</fullName>
        <description>Date the company closed.</description>
        <label>Date Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Decreasing_PSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the previous calculated PSI was higher than the last one.</description>
        <inlineHelpText>Indicates if the previous calculated PSI was higher than the last one.</inlineHelpText>
        <label>Decreasing PSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Decreasing_Revenue__c</fullName>
        <description>Defines if a customer is classified as decrease revenue customer.</description>
        <label>Decreasing Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Modify_Preset_Quantity__c</fullName>
        <description>Specifies in which way quantity modifications of preset quantities of delivery documents can be modified.</description>
        <inlineHelpText>This setting is observed only for special orders, deliveries, truck loads and free items generated via pricing</inlineHelpText>
        <label>Delivery Role Modify Preset Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Only Decrease</fullName>
                </value>
                <value>
                    <fullName>Only Increase</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Number_Of_Printouts__c</fullName>
        <description>--- Attribute no longer used --- Specifies the number of printouts of the delivery Role.</description>
        <label>Delivery Role Number Of Printouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Valid_From__c</fullName>
        <description>From this date on the Delivery Role is valid.</description>
        <label>Delivery Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Role_Valid_Thru__c</fullName>
        <description>Until this date the Delivery Role is valid.</description>
        <label>Delivery Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if last relevant call (and then the customer) has distribution issues.</description>
        <inlineHelpText>Indicates if last relevant call (and then the customer) has distribution issues.</inlineHelpText>
        <label>Distribution Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds the unique external id.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Fixed_Overdraw__c</fullName>
        <description>Fixed-Based Overdraw Allowance Percentage.</description>
        <label>Fixed Overdraw %</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Role_Valid_From__c</fullName>
        <description>From this date on the Fund Role is valid.</description>
        <label>Fund Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Role_Valid_Thru__c</fullName>
        <description>Until this date the Fund Role is valid.</description>
        <label>Fund Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Last_Call_Date__c</fullName>
        <defaultValue>DATE(2000,01,01)</defaultValue>
        <description>Last customer call date relevant for KPI calculation.</description>
        <inlineHelpText>Last customer call date relevant for KPI calculation.</inlineHelpText>
        <label>Last Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Last_PSI__c</fullName>
        <description>Last relevant calculated PSI.</description>
        <label>Last PSI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Match_Code__c</fullName>
        <description>Matchcode of the business partner. Usually a concatenation of several encoded account attributes, e.g. Name + State + City -&gt; KROGER.GA.ATL.</description>
        <label>Match Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__OOS_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if last relevant call (and then the customer) has OoS issues.</description>
        <inlineHelpText>Indicates if last relevant call (and then the customer) has OoS issues.</inlineHelpText>
        <label>OoS Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Order_Template_Blocked__c</fullName>
        <description>By this temporary order template blocking it is achieved, that this customer can not order them as long this flag is set.</description>
        <label>Order Role Order Template Blocked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Orderer_Type__c</fullName>
        <description>Type of the ordering business partner: direct, indirect.</description>
        <label>Order Role Orderer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Replenishment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Valid_From__c</fullName>
        <description>From this date on the Order Role is valid.</description>
        <label>Order Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Role_Valid_Thru__c</fullName>
        <description>Until this date the Order Role is valid.</description>
        <label>Order Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Level__c</fullName>
        <description>Customer organization level classification.</description>
        <label>Org Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CustLevel01</fullName>
                </value>
                <value>
                    <fullName>CustLevel02</fullName>
                </value>
                <value>
                    <fullName>CustLevel03</fullName>
                </value>
                <value>
                    <fullName>CustLevel04</fullName>
                </value>
                <value>
                    <fullName>CustLevel05</fullName>
                </value>
                <value>
                    <fullName>CustLevel06</fullName>
                </value>
                <value>
                    <fullName>CustLevel07</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Credit_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the customer is credit blocked or not.</description>
        <label>Payer Role Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Credit_Rating__c</fullName>
        <description>Specifies the credit rating of the customer.</description>
        <label>Payer Role Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Document_Transaction_Type__c</fullName>
        <description>Specifies how to handle delivery documents regarding payments.</description>
        <label>Delivery Document Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CashInvoice</fullName>
                </value>
                <value>
                    <fullName>CreditInvoice</fullName>
                </value>
                <value>
                    <fullName>ValuatedDeliveryNote</fullName>
                </value>
                <value>
                    <fullName>NonValuatedDeliveryNote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Overall_Credit_Limit__c</fullName>
        <description>Specifies the overall credit limit for the customer.</description>
        <label>Payer Role Overall Credit Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Valid_From__c</fullName>
        <description>From this date on the Payer Role is valid.</description>
        <label>Payer Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer_Role_Valid_Thru__c</fullName>
        <description>Until this date the Payer Role is valid.</description>
        <label>Payer Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Phase__c</fullName>
        <description>Describes in which systems the record is stored.</description>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Type__c</fullName>
        <description>Determines the pricing type of the customer.</description>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Priority__c</fullName>
        <description>Classification of a company.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Priority</fullName>
                </value>
                <value>
                    <fullName>B - Priority</fullName>
                </value>
                <value>
                    <fullName>C - Priority</fullName>
                </value>
                <value>
                    <fullName>D - Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Valid_From__c</fullName>
        <description>From this date on the Promotion Role is valid.</description>
        <label>Promotion Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Valid_Thru__c</fullName>
        <description>Until this date the Promotion Role is valid.</description>
        <label>Promotion Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__RBF_Overdraw__c</fullName>
        <description>RBF-Based Overdraw Allowance Percentage.</description>
        <label>RBF Overdraw %</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the CustomerExtension record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales organization which the customer extension belongs to.</description>
        <formula>ACCL__Account__r.ACCL__Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Organization</label>
        <referenceTo>ACCL__Sales_Organization__c</referenceTo>
        <relationshipLabel>Customer Extensions</relationshipLabel>
        <relationshipName>Customer_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes, whether the account can be used for sales activities. This attribute controls nothing, just for information.</description>
        <label>Sales Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>Status of the account. Controls nothing, just information. Business partner roles are used for controlling instead.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>090</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Store_Role_Valid_From__c</fullName>
        <description>From this date on the Store Role is valid.</description>
        <label>Store Role Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Store_Role_Valid_Thru__c</fullName>
        <description>Until this date the Store Role is valid.</description>
        <label>Store Role Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Tax_Jurisdiction_Code__c</fullName>
        <description>Describes where the taxes have to be paid.</description>
        <label>Tax Jurisdiction Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Week_Day_Share_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Week Day Share Profile that is utilized for calculations for the referenced account.</description>
        <label>Week Day Share Profile</label>
        <referenceTo>ACCL__Week_Day_Share_Profile__c</referenceTo>
        <relationshipLabel>Customer Extensions</relationshipLabel>
        <relationshipName>Customer_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDLZ_MOQCaseOffRoute__c</fullName>
        <label>MOQ Case (Off-Route)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_MOQCaseStandard__c</fullName>
        <label>MOQ Case (Standard)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_MOQOffRoute__c</fullName>
        <formula>MDLZ_MOQCaseOffRoute__c  *  ACCL__Sales_Organization__r.MDLZ_AvgCaseCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOQ (Off-Route)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_MOQStandard__c</fullName>
        <formula>MDLZ_MOQCaseStandard__c  * ACCL__Sales_Organization__r.MDLZ_AvgCaseCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOQ (Standard)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_POD_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field will show if Proof-Of-Delivery is required or not</description>
        <label>Is POD Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Extension</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEX-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Account_Plan_Type_Timeframe</fullName>
        <active>true</active>
        <description>Customer must have the Promotion Role assigned (Promotion Valid From and Promotion Valid Thru) if the Account Plan Type is &apos;Plan&apos;.</description>
        <errorConditionFormula>AND(ISPICKVAL(ACCL__Account_Plan_Type__c , &apos;Plan&apos;),
      OR(
      ISBLANK(ACCL__Promotion_Valid_From__c),
      ISBLANK(ACCL__Promotion_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Customer must have the Promotion Role assigned (Promotion Valid From and Promotion Valid Thru) if the Account Plan Type is &apos;Plan&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Bill_To_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Bill_To_Role_Valid_From__c),
      ISBLANK(ACCL__Bill_To_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Bill_To_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Bill_To_Role_Valid_Thru__c),
      ACCL__Bill_To_Role_Valid_From__c&lt;= ACCL__Bill_To_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Bill To&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Broker_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Broker_Role_Valid_From__c),
      ISBLANK(ACCL__Broker_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Broker_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Broker_Role_Valid_Thru__c),
      ACCL__Broker_Role_Valid_From__c&lt;= ACCL__Broker_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Broker&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Customer_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Customer_Role_Valid_From__c),
      ISBLANK(ACCL__Customer_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Customer_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Customer_Role_Valid_Thru__c),
      ACCL__Customer_Role_Valid_From__c&lt;= ACCL__Customer_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Customer&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Delivery_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Delivery_Role_Valid_From__c),
      ISBLANK(ACCL__Delivery_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Delivery_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Delivery_Role_Valid_Thru__c),
      ACCL__Delivery_Role_Valid_From__c&lt;= ACCL__Delivery_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Delivery&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Fund_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Fund_Role_Valid_From__c),
      ISBLANK(ACCL__Fund_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Fund_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Fund_Role_Valid_Thru__c),
      ACCL__Fund_Role_Valid_From__c&lt;= ACCL__Fund_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Fund&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Order_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Order_Role_Valid_From__c),
      ISBLANK(ACCL__Order_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Order_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Order_Role_Valid_Thru__c),
      ACCL__Order_Role_Valid_From__c&lt;= ACCL__Order_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Order&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Payer_Role_Timeframe</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(ACCL__Payer_Role_Valid_From__c),
      ISBLANK(ACCL__Payer_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(ACCL__Payer_Role_Valid_From__c),
      NOT ISBLANK(ACCL__Payer_Role_Valid_Thru__c),
      ACCL__Payer_Role_Valid_From__c&lt;= ACCL__Payer_Role_Valid_Thru__c)))</errorConditionFormula>
        <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Payer&apos; is assigned to the Customer.</errorMessage>
    </validationRules>
</CustomObject>